<resources>
    <string name="app_name">Insta</string>
    <string name="app_title">Yumistagram</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="no_account_message">You don\'t have an account?</string>
    <string name="signup_button">Sign up</string>

    //create account page
    <string name="username">Username</string>
    <string name="confirm">Confirm Password</string>


    //Profile page
    <string name="user_id">user id</string>
    <string name="profile">profile</string>

    //Timeline page
    <string name="number">0</string>
    <string name="likes">Likes </string>
    <string name="comments">Comments</string>

    //Profile page
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends">Friends</string>
    <string name="title_account">Account</string>


</resources>
