<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.yuminakamura.insta.activities.SignInActivity">

    <ImageView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/text_border"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/text_border"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/sign_in"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="@dimen/text_size_middium"
        android:background="@null"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/account_message"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_message"
        android:textSize="@dimen/text_size_middium"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/sign_up"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textColor="@color/white"
        android:text="@string/signup_button"
        android:textSize="@dimen/text_size_middium"
        android:textAllCaps="false"/>
</LinearLayout>
