<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.yuminakamura.insta.activities.RegisterActivity">

    <EditText
        android:id="@+id/resister_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:hint="@string/username"
        android:inputType="text"
        android:background="@drawable/text_border"
        />


    <EditText
        android:id="@+id/resister_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/text_border"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/text_border"
        />

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:background="@drawable/text_border"
        />

    <Button
        android:id="@+id/register_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_middium"
        android:textColor="@color/white"/>
</LinearLayout>
