<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/photos_user_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person_black_24dp"/>

    <TextView
        android:id="@+id/photos_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/photos_user_image"
        android:layout_alignTop="@id/photos_user_image"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/photos_user_image"
        android:gravity="center_vertical"
        android:text="@string/username"/>

    <ImageView
        android:id="@+id/photos_timeline_image"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@id/photos_user_image"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        tools:src="@mipmap/ic_launcher"/>

    <ImageView
        android:id="@+id/photos_favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photos_timeline_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_favorite_border_black_24dp"/>

    <ImageView
        android:id="@+id/photos_comment_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/photos_favorite_icon"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/photos_favorite_icon"
        android:src="@drawable/ic_mode_comment_black_24dp"/>

    <TextView
        android:id="@+id/photos_num_of_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/photos_favorite_icon"
        android:layout_below="@id/photos_favorite_icon"
        android:layout_marginTop="8dp"
        android:text="@string/number"/>

    <TextView
        android:id="@+id/photos_likes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/photos_num_of_likes"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@id/photos_num_of_likes"
        android:text="@string/likes"/>

    <TextView
        android:id="@+id/photos_num_of_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/photos_num_of_likes"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/photos_likes_text"
        android:text="@string/number"/>

    <TextView
        android:id="@+id/photos_comments_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/photos_num_of_likes"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@id/photos_num_of_comments"
        android:text="@string/comments"/>

    <TextView
        android:id="@+id/photos_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photos_num_of_likes"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        tools:text="desctiption will be here! "/>
</RelativeLayout>