<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yuminakamura.insta.activities.TimelineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="10dp">
        <ImageView
            android:id="@+id/userimage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person_black_24dp"/>
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/username"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/timeline_pic"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        tools:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="10dp">
        <ImageView
            android:id="@+id/favIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_favorite_border_black_24dp"
            />
        <ImageView
            android:id="@+id/commentIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_mode_comment_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/numOfLikes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number"/>
        <TextView
            android:id="@+id/textlikes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/likes"/>
        <TextView
            android:id="@+id/numOfcomments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/number"/>
        <TextView
            android:id="@+id/textComments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/likes"/>
    </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:padding="10dp"
            android:text="desctiption will be here! "/>
</LinearLayout>
