<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_user_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_face_black_24dp"/>

    <TextView
        android:id="@+id/profile_num_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="22dp"
        android:layout_toRightOf="@id/profile_user_image"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/profile_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_num_posts"
        android:textSize="16dp"
        android:layout_toRightOf="@+id/profile_user_image"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/posts" />

    <TextView
        android:id="@+id/profile_num_of_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="34"
        android:textSize="22dp"
        android:layout_toRightOf="@+id/profile_num_posts"
        android:layout_marginStart="55dp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/profile_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_toRightOf="@+id/profile_posts"
        android:layout_below="@+id/profile_num_of_follower"
        android:text="@string/followers"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/profile_num_of_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="40"
        android:textSize="22dp"
        android:layout_toRightOf="@+id/profile_num_of_follower"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/profile_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_toRightOf="@id/profile_follower"
        android:layout_below="@id/profile_num_of_following"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/following"
        />

    <TextView
        android:id="@+id/profile_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_user_image"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>