<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yuminakamura.insta.activities.TimelineRecyclerViewActivity">

    <LinearLayout
        android:id="@+id/userinfo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        >
        <ImageView
            android:id="@+id/userimage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_person_black_24dp"/>
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/username"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/timeline_pic_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <ImageView
          android:id="@+id/timeline_pic"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="100dp"
          tools:src="@mipmap/ic_launcher"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_like_and_comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        <ImageView
            android:id="@+id/favIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_favorite_border_black_24dp"
            />
        <ImageView
            android:id="@+id/commentIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_mode_comment_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/like_and_commentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/numOfLikes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number"/>
        <TextView
            android:id="@+id/Textlikes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/likes"/>

        <TextView
            android:id="@+id/numOfcomments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/number"/>
        <TextView
            android:id="@+id/textComments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/likes"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/desctiptionLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>
