<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yuminakamura.insta.activities.ProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <ImageView
            android:id="@+id/profile_user_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_face_black_24dp"/>

        <TextView
            android:id="@+id/num_of_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textSize="22dp"
            android:layout_toRightOf="@id/profile_user_image"
            android:layout_marginTop="25dp"
            android:layout_marginStart="40dp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/num_of_posts"
            android:textSize="16dp"
            android:layout_toRightOf="@+id/profile_user_image"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/posts" />

        <TextView
            android:id="@+id/num_of_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="34"
            android:textSize="22dp"
            android:layout_toRightOf="@+id/num_of_posts"
            android:layout_marginStart="55dp"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:id="@+id/follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_toRightOf="@+id/posts"
            android:layout_below="@+id/num_of_follower"
            android:text="@string/followers"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/num_of_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="40"
            android:textSize="22dp"
            android:layout_toRightOf="@+id/num_of_follower"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_toRightOf="@id/follower"
            android:layout_below="@id/num_of_follower"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/following"
            />

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_user_image"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"/>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>

</RelativeLayout>
